# ipip-neo-data

./: .gitattributes  IPIP-NEO-120.ipynb  IPIP-NEO-300.ipynb  README.md  parquet.py  pyproject.toml  run-jupyter  traits.py
datasets/raw/: IPIP120.por  IPIP300.por
