[tool.poetry]
name = "ipip-neo-data"
version = "1.0.0"
description = "IPIP NEO Data"
authors = ["Ederson Corbari <e@neuroquest.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "2.2.3"
pyreadstat = "1.2.7"
five-factor-e = "1.12.1"
jupyterlab = "4.0.6"
pyarrow = "^20.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

